6. Deploy pods in cluster created by eksctl pt 2/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: backend
    image: gargmanik6080/server:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 80
