6. Deploy pods in cluster created by eksctl pt 2/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
  - name: frontend
    image: gargmanik6080/client:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 80
      name: http
