6. Deploy pods in cluster created by eksctl pt 2/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: omnixo-server
  namespace: default
spec:
  ports:
  - port: 3030
    protocol: TCP
    targetPort: 80
    name: "3030"

  selector:
    app: backend
  type: ClusterIP
