6. Deploy pods in cluster created by eksctl pt 2/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: omnixo-frontend
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    app: frontend
  type: NodePort
